# anime-management

./: .dockerignore  Dockerfile.linux  Dockerfile.linux-native.x64  LICENSE  README.md  buildAllLinux.sh  cleanBuildOutput.sh  linuxBuild.sh  linuxBuild.x64.sh  package.json  project-details.md
.cursor/rules/: custom-basic-rules.mdc
.github/: README.md
.github/workflows/: README.md  build-android.yml  build-ios.yml  build-linux.yml  build-macos.yml  build-windows.yml  release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  mobile.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  db.rs  filesystem.rs  lib.rs  main.rs
src/components/: AIRecommendationProgress.tsx  AIRecommendationVisualizer.tsx  AnimeCard.tsx  AnimeCardGrid.tsx  AnimeListCard.tsx  AnimeScheduleView.tsx  CacheSettings.tsx  ErrorBoundary.tsx  ErrorNotification.tsx  FilterErrors.tsx  InAppNotificationCenter.tsx  LazyLoadedImage.tsx  NotificationIcon.tsx  NotificationSettings.tsx  OfflineIndicator.tsx  RecommendationGrid.tsx  RecommendationPageHeader.tsx  ResponsiveLayout.tsx  SearchFilters.tsx  SettingsStorage.tsx  TrendingAnimeSection.tsx  UpcomingNotifications.tsx  ViewToggle.tsx
src/contexts/: ErrorContext.tsx  NotificationProvider.tsx  OfflineContext.tsx
src/hooks/: useAIRecommendations.ts  useAnime.ts
src/pages/: AnimeDetail.tsx  DiscoveryPage.tsx  HomePage.tsx  RecommendationsPage.tsx  SearchPage.tsx  SeasonalAnimePage.tsx  Settings.tsx  SettingsPage.tsx  StatsDashboard.tsx  TrendingAnimePage.tsx  UserAnimeList.tsx
src/services/: animeDatabase.ts  (+9 more)
(+44 files in other folders)
