[package]
name = "anitrack"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "anime_management_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.12", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.13", features = [] }
tauri-plugin-opener = "2.0.0-beta.1"
tauri-plugin-dialog = "2.0.0-beta.1"
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
once_cell = "1.18.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
hostname = "0.3"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
zip = "0.6"
dirs = "5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

